<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bee Spelled</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play!</string>
    <string name="test">Test</string>
    <string name="quiz">Quiz</string>
    <string name="history">History</string>
    <string name="lists">Words</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="delete_data">Delete All Data</string>
    <string name="word_lists">Word Lists</string>
    <string name="listName">Name of List</string>
    <string name="listText">Enter Words…</string>
    <string name="helpText">Welcome to Bee Spelled! To create and edit your word lists, select the
    "Words" button from the home screen. You will be shown all of your current lists.
    Selecting the ellipsis next to a list will allow you to edit a list name or delete a list.
    To add a new list, tap the plus button in the bottom right hand corner of the screen.
    You will be prompted for a list name and will then be directed to the words screen. Adding, editing,
    and deleting words works the same as with lists. At any time, the home icon in the bottom left hand
    corner will take you back to the home screen.</string>

    <color name="yellow">#ffe6b800</color>
    <color name="blue">#ff1aa2e6</color>
    <color name="pink">#ffec1496</color>
    <color name="green">#ff4cd244</color>
    <color name="white">#ffffff</color>
    <color name="background">#fffff6c3</color>
    <color name="black">#ff000000</color>
    <color name="red">#ffff5153</color>
    <color name="gray">#ffbcbcbc</color>

    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_lists">ListsActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="create_list_dialog_title">Create List</string>
    <string name="edit_list_dialog_title">Edit List</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete_all">Are you sure you want to delete all application data?</string>
    <string name="delete">Delete</string>

    <string name="playHeader">Play!</string>
    <string name="playScreenQuizButton">QUIZ</string>
    <string name="playScreenStudyButton">STUDY</string>
    <string name="playScreenOptionsButton">OPTIONS</string>
    <string name="select_list_dialog_title">Select List</string>

    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quizHeader">Quiz!</string>
    <string name="keyboardButton">KEYBOARD</string>
    <string name="speechButton">SPEAK WORD</string>
    <string name="infoButton">INFO</string>
    <string name="quitButton">QUIT</string>
    <string name="hearButton">HEAR WORD</string>
    <string name="keyboardInput">Speak word or type here...</string>

    <string name="title_activity_study">StudyActivity</string>
    <string name="studyHeader">Study!</string>
    <string name="play_select_list_button_text">CHANGE LIST</string>
    <string name="play_options_view_stats_button_text">VIEW STATS</string>
    <string name="play_screen_clear_history_button_text">CLEAR LIST\'S HISTORY</string>
    <string name="OK_Buttons">OK</string>
    <string name="study_stats_button_text">STATS</string>
    <string name="submitButtonText">SUBMIT</string>

    <string-array name="ellipsis_array">
        <item>Edit…</item>
        <item>Delete</item>
    </string-array>

</resources>
