<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/yellow"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:background="@color/pink"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:id="@+id/play_btn"
        android:layout_above="@+id/words_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:layout_alignRight="@+id/words_btn"
        android:layout_alignEnd="@+id/words_btn"
        android:onClick="playButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lists"
        android:background="@color/blue"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:id="@+id/words_btn"
        android:layout_above="@+id/options_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:layout_alignRight="@+id/options_btn"
        android:layout_alignEnd="@+id/options_btn"
        android:onClick="wordsButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:background="@color/green"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:id="@+id/options_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="optionsButton"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/bee_spelled"
        android:background="@color/yellow"
        android:contentDescription="@string/app_name"
        android:layout_above="@+id/play_btn"
        android:layout_alignLeft="@+id/play_btn"
        android:layout_alignStart="@+id/play_btn" />

</RelativeLayout>
