<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.beespelled.beespelled.PlayActivity"
    android:background="@color/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:id="@+id/test_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="224dp"
        android:background="@color/pink"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:id="@+id/quiz_btn"
        android:layout_marginTop="85dp"
        android:layout_alignTop="@+id/test_btn"
        android:layout_alignLeft="@+id/test_btn"
        android:layout_alignStart="@+id/test_btn"
        android:background="@color/blue"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/history_btn"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/quiz_btn"
        android:layout_alignLeft="@+id/quiz_btn"
        android:layout_alignStart="@+id/quiz_btn"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/selected_list_text"
        android:layout_above="@+id/test_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp" />
</RelativeLayout>
